--- a/src/sass/components/_login-form.scss
+++ b/src/sass/components/_login-form.scss
@@ -91,6 +91,9 @@
       height: 2rem;
       cursor: pointer;
 
+      @media only screen and (max-width: $bp-largest) {
+        top: 0.4rem !important;
+      }
       // .show-pass-icon--opened and --closed
       // it seems that ion-icon component does not allow to use
       // more than one class in the same element, so to DRY the code
@@ -110,6 +113,10 @@
 
   &__input-icon-box {
     left: 1.5rem;
+
+    @media only screen and (max-width: $bp-largest) {
+      top: 0.4rem !important;
+    }
   }
 
   &__input {
