--- a/src/sass/components/_register-form.scss
+++ b/src/sass/components/_register-form.scss
@@ -109,6 +109,10 @@
       height: 2rem;
       cursor: pointer;
 
+      @media only screen and (max-width: $bp-largest) {
+        top: 0.4rem !important;
+      }
+
       // .show-pass-icon--opened and --closed
       // it seems that ion-icon component does not allow to use
       // more than one class in the same element, so to DRY the code
